fix: avoid clipped twitter icon

--- a/assets/scss/menubar.sass
+++ b/assets/scss/menubar.sass
@@ -68,7 +68,7 @@
             bottom: 100px
 
         .social-icon
-            height: 50px
+            height: 51px
             width: 50px
             margin: 2px
 
